[package]
name = "tmux-deck-mods"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
